# noob

./: pyproject.toml
.claude/: settings.local.json
src/noob/: event.py  scheduler.py  store.py  toposort.py  tube.py  types.py
src/noob/network/: message.py
src/noob/node/: __init__.py  gather.py  map.py  return_.py
src/noob/runner/: asyncio.py  base.py  sync.py  zmq.py
src/noob/testing/: __init__.py  nodes.py
tests/data/pipelines/map/: map_basic.yaml  map_depends.yaml  map_depends_double.yaml  map_gather.yaml  map_nested.yaml
tests/fixtures/: tubes.py
tests/test_pipelines/: test_input.py  test_map.py
